# xacc-cmr

./: .gitmodules  CMakeLists.txt  README.md
embedding/: CMREmbedding.cpp  CMREmbedding.hpp  CMakeLists.txt  DWSapiActivator.cpp  DWSapiEmbedding.cpp  DWSapiEmbedding.hpp  manifest.json
embedding/tests/: CMREmbeddingTester.cpp  CMakeLists.txt  DWSapiEmbeddingTester.cpp
